--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "doctrine/dbal": "^3.10",
         "fruitcake/laravel-cors": "^2.2",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^8.83",
@@ -19,7 +20,7 @@
         "mockery/mockery": "^1.5",
         "nunomaduro/collision": "^5.11",
         "phpunit/phpunit": "^9.6"
-    }, 
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
