--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=NovaTrustBank
 APP_ENV=production
 APP_KEY=base64:6VwTGpadet6USVRjWRfeO3ETbn7RsuO99765bm70KAs=
-APP_DEBUG=false
+APP_DEBUG=yes
 APP_URL=https://novatrustbank.onrender.com
 
 LOG_CHANNEL=stack
