--- a/.env
+++ b/.env
@@ -1,20 +1,50 @@
 APP_NAME=NovaTrustBank
-APP_ENV=production
-APP_KEY=base64:6VwTGpadet6USVRjWRfeO3ETbn7RsuO99765bm70KAs=
-APP_DEBUG=false
-APP_URL=https://novatrustbank.onrender.com
+APP_ENV=local
+APP_KEY=base64:ALAYl2Xyey3mM83PdyNnz92xc9QaY8w3MWpd+kJSFaU=
+APP_DEBUG=true
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=dpg-d47rrhali9vc738uc130-a.oregon-postgres.render.com
-DB_PORT=5432
-DB_DATABASE=novatrustbank_db
-DB_USERNAME=novatrustbank_db_user
-DB_PASSWORD=DkxoTOsJhVZ2wD4AxsTCjbo44S3syqlU
+# ------------------------------
+# DATABASE SETTINGS
+# ------------------------------
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=novatrust_bank
+DB_USERNAME=root
+DB_PASSWORD=
 
+# ------------------------------
+# MAIL SETTINGS
+# (for future EMAIL + SMS alerts)
+# ------------------------------
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=sarasizemore1009@gmail.com
+MAIL_PASSWORD=lahtvgreqgtygccs
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=sarasizemore1009@gmail.com
+MAIL_FROM_NAME="NovaTrust Bank"
+
+
+# ------------------------------
+# OTHER SETTINGS
+# ------------------------------
+BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-SESSION_DRIVER=file
-QUEUE_CONNECTION=sync
 FILESYSTEM_DISK=local
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+# ------------------------------
+# (OPTIONAL for SMS or 2FA later)
+# ------------------------------
+# TWILIO_SID=
+# TWILIO_AUTH_TOKEN=
+# TWILIO_PHONE_NUMBER=
