--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^7.4|^8.0",
         "doctrine/dbal": "^3.10",
         "fruitcake/laravel-cors": "^2.2",
         "guzzlehttp/guzzle": "^7.8",
