Fix telegram listener

--- a/.env
+++ b/.env
@@ -19,6 +19,19 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 # ------------------------------
+# SESSIONS 
+# ------------------------------
+SESSION_COOKIE=novatrustbank_session
+SESSION_DOMAIN=127.0.0.1:8000
+SESSION_DRIVER=file
+SESSION_ENCRYPT=false
+SESSION_HTTP_ONLY=true
+SESSION_LIFETIME=120
+SESSION_PATH=/
+SESSION_SAME_SITE=None
+SESSION_SECURE_COOKIE=true
+
+# ------------------------------
 # MAIL SETTINGS
 # (for future EMAIL + SMS alerts)
 # ------------------------------
@@ -37,10 +50,12 @@ MAIL_FROM_NAME="NovaTrust Bank"
 # ------------------------------
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+CORS_ALLOWED_ORIGINS=https://127.0.0.1:8000
+FILESYSTEM_DISK=s3
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SANCTUM_STATEFUL_DOMAINS=127.0.0.1:8000
+TELEGRAM_BOT_TOKEN=8538050369:AAGHLSy5D7r-_6QA9K1rbqkebWrzpbjc1ek
+TELEGRAM_CHAT_ID=6513265609
 
 # ------------------------------
 # (OPTIONAL for SMS or 2FA later)
