Remove duplicate chats migration to fix migration conflict

--- a/.env
+++ b/.env
@@ -1,65 +1,26 @@
 APP_NAME=NovaTrustBank
 APP_ENV=local
-APP_KEY=base64:ALAYl2Xyey3mM83PdyNnz92xc9QaY8w3MWpd+kJSFaU=
+APP_KEY=base64:+dTdZ2yMx+ytC3CGtK56xRg1Wu8xwuviNFbSa9lZieE=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+SESSION_DOMAIN=127.0.0.1
+SESSION_SECURE_COOKIE=false
+SESSION_SAME_SITE=lax
+
 LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# ------------------------------
-# DATABASE SETTINGS
-# ------------------------------
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=sync
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=novatrust_bank
 DB_USERNAME=root
 DB_PASSWORD=
-
-# ------------------------------
-# SESSIONS 
-# ------------------------------
-SESSION_COOKIE=novatrustbank_session
-SESSION_DOMAIN=127.0.0.1:8000
-SESSION_DRIVER=file
-SESSION_ENCRYPT=false
-SESSION_HTTP_ONLY=true
-SESSION_LIFETIME=120
-SESSION_PATH=/
-SESSION_SAME_SITE=None
-SESSION_SECURE_COOKIE=true
-
-# ------------------------------
-# MAIL SETTINGS
-# (for future EMAIL + SMS alerts)
-# ------------------------------
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=sarasizemore1009@gmail.com
-MAIL_PASSWORD=lahtvgreqgtygccs
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=sarasizemore1009@gmail.com
-MAIL_FROM_NAME="NovaTrust Bank"
-
-
-# ------------------------------
-# OTHER SETTINGS
-# ------------------------------
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-CORS_ALLOWED_ORIGINS=https://127.0.0.1:8000
-FILESYSTEM_DISK=s3
-QUEUE_CONNECTION=sync
-SANCTUM_STATEFUL_DOMAINS=127.0.0.1:8000
-TELEGRAM_BOT_TOKEN=8538050369:AAGHLSy5D7r-_6QA9K1rbqkebWrzpbjc1ek
-TELEGRAM_CHAT_ID=6513265609
-
-# ------------------------------
-# (OPTIONAL for SMS or 2FA later)
-# ------------------------------
-# TWILIO_SID=
-# TWILIO_AUTH_TOKEN=
-# TWILIO_PHONE_NUMBER=
